--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,12 @@ orbs:
 workflows:
   node-tests:
     jobs:
-      - node/test
+      steps:
+      - checkout
+      - run: npm install
+      - run:
+          name: "Run Jest and Collect Coverage Reports"
+          command: jest --collectCoverage=true
+      - store_artifacts:
+          path: coverage
+
