--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,12 @@ orbs:
 workflows:
   node-tests:
     jobs:
-      steps:
-        - checkout
-        - run: npm install
-        - run:
-            name: "Run Jest and Collect Coverage Reports"
-            command: jest --collectCoverage=true
-        - store_artifacts:
-            path: coverage
+      coverage:
+        steps:
+          - checkout
+          - run: npm install
+          - run:
+              name: "Run Jest and Collect Coverage Reports"
+              command: jest --collectCoverage=true
+          - store_artifacts:
+              path: coverage
