--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Jest globally
       run:  sudo npm install -g jest
     - name: Run Tests
-      run:  npm run test
+      run:  npm run test:ci
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
