--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,6 +11,6 @@ sonar.tests=./src
 sonar.test.inclusions=**/*.spec.ts
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.testExecutionReportPaths=./test-report.xml
+sonar.testExecutionReportPaths=./reports/test-report.xml
 
 sonar.sourceEncoding=UTF-8
