Update sonar props

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,12 +3,11 @@ sonar.projectKey=nausik_Some-test
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
-sonar.exclusions=**/*.spec.js
-sonar.exclusions=/node_modules/
+sonar.sources=src
+sonar.exclusions=**/*.spec.js, node_modules/**
 sonar.language=js
-sonar.tests=./src
-sonar.test.inclusions=**/*.spec.ts
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.js
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=./reports/test-report.xml
