--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "test:ci": "react-scripts test  --env=jsdom --ci --coverage --testResultsProcessor jest-sonar-reporter",
+    "test": "react-scripts test --silent --env=jsdom --ci --coverage --testResultsProcessor jest-sonar-reporter",
+    "test:ci": "cross-env CI=true react-scripts test --silent --env=jsdom --ci --coverage --testResultsProcessor jest-sonar-reporter",
     "test:coverage": "npm run test -- --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint ."
