--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,8 @@ sonar.language=js
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.js
 
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.testExecutionReportPaths=./reports/test-report.xml
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=reports/test-report.xml
 
 sonar.sourceEncoding=UTF-8
