--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --silent --env=jsdom --ci --coverage --testResultsProcessor jest-sonar-reporter",
-    "test:ci": "cross-env CI=true react-scripts test --silent --env=jsdom --ci --coverage --testResultsProcessor jest-sonar-reporter",
+    "test:ci": "react-scripts test --silent --env=jsdom --ci --coverage --testResultsProcessor jest-sonar-reporter",
     "test:coverage": "npm run test -- --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint ."
