--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: code-coverage-report
-        path: reports/test-report.xml
+        path: coverage/lcov-report/src/Layout.js.html
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
