--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,11 +3,11 @@ sonar.projectKey=nausik_Some-test
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=src
-sonar.exclusions=**/*.spec.js, node_modules/**, src/setupTests.svg
 sonar.language=js
+sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=**/src/**/*.spec.js
+sonar.exclusions=**/*.spec.js, node_modules/**, src/setupTests.svg
+sonar.test.inclusions=**/*.spec.js
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/test-report.xml
