--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "root": true,
-  "extends": "airbnb",
+  "extends": ["airbnb","plugin:sonarjs/recommended"],
+  "plugins": ["sonarjs"],
   "env": {
     "es6": true,
     "browser": true,
