--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-watch": "2.1.14",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "jest-enzyme": "^7.1.2",
     "jest-sonar-reporter": "^2.0.0"
   },
